--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>Self-taught developer <br>Code in Python <br>Windows and Linux enjoyer</h3>
             <br>
             <p>I'm Uzbek from Uzbekistan, Tashkent</p>
-            <p>19 y.o Student of <a href="https://idu.uz/">IDU</a> University in Tashkent</p>
+            <p>19 y.o Student of <a href="https://idu.uz/">IDU</a> in Tashkent</p>
             <p>I'm currently working on self-projects also open to work</p>
             <p>I'm currently learning Flask and aiogram</p>
             <br><br>
