--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
             <h3>Self-taught developer <br>Code in Python <br>Windows and Linux enjoyer</h3>
             <br>
-            <p>I'm Uzbek from Uzbekistan, Tashkent</p>
+            <p>Uzbek from Uzbekistan, Tashkent</p>
             <p>19 y.o Student of <a href="https://idu.uz/">IDU</a> in Tashkent</p>
-            <p>I'm currently working on self-projects also open to work</p>
-            <p>I'm currently learning Flask and aiogram</p>
+            <p>Currently working on self-projects also open to work</p>
+            <p>Currently learning Flask and aiogram</p>
             <br><br>
           </ul>
         </div>
@@ -59,7 +59,7 @@
 
             <h3>Sotqin kinosidan lavhalar</h3>
             <br>
-            <p>One of the my first project was Twitter bot named <a href="https://twitter.com/Sotqin">Sotqin kinosidan lavhalar</a></p>
+            <p>One of the first project was Twitter bot named <a href="https://twitter.com/Sotqin">Sotqin kinosidan lavhalar</a></p>
             <p>This bot posts on every 30 minutes and the bot will post 1 frame every second of the movie Sotqin(2015) Uzbek kino</p>
             <p>Bot is running since may 2023</p>
             <br>
@@ -79,7 +79,7 @@
 
             <h3>Smartfon haqida bot</h3>
             <p>Wikipedia bot on Telegram about smart phones such as iPhone, Samsung, Redmi</p>
-            <p>You can select your phone brand and get its characteristics</p>
+            <p>Users can select your phone brand and get its characteristics</p>
             <p><a href="https://web.telegram.org/k/#@smartfonhaqida_bot">@smartfonhaqida_bot</a></p>
 
           </ul>
