--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="glitch.css" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <iframe style="display: none;" width="0" height="0" src="https://www.youtube.com/embed/0_e1bmlw8nM?rel=0&autoplay=1" frameborder="0" allow="autoplay;" allow="fullscreen"></iframe> -->
+    <link rel="shortcut icon" href="">
   </head>
   <body>
     
