--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
       }
 
     </script>
-    <script
-      src="https://kit.fontawesome.com/dd8c49730d.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/dd8c49730d.js" crossorigin="anonymous"></script>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
