--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="">
   </head>
   <body>
-    
+    <div class="background-image"></div>
     <div class="container">
       <div class="row">
         <div class="col">
