--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
 
       </div>
       
+      <footer>
+        <h6>Copyright © 2023 Bahrom Bek</h6>
+      </footer>
     </div>
-    
 
   
     <script src="https://kit.fontawesome.com/dd8c49730d.js" crossorigin="anonymous"></script>
