--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 19 y.o Student of <a href="https://idu.uz/">IDU</a> in Tashkent
               </p>
               <p>Currently working on self-projects also open to work</p>
-              <p>Currently learning Flask and aiogram</p>
+              <p>Currently learning Django and aiogram</p>
               <br /><br />
             </ul>
           </div>
